--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,30 +12,55 @@
 	#page_sub_nav { display: none; }
 	td { vertical-align: top; }
 	.ui-tooltip, .qtip { max-width: 200px; }
+  #homepage-left-col {
+    max-width: 55%;
+    margin-top: 20px;
+  }
+  #homepage-logo {
+    background: url("images/logo-horizontal-large.png") -231px 0px;
+    width: 325px;
+    height: 186px;
+    display: block;
+  }
+  #leaves {
+    background:url('images/missing-leaf.png') 0px 0px;
+    width:344px;
+    height:313px;
+    position:absolute;
+    top:24px;
+    left:158px;
+    z-index:10;
+  }
+  #homepage-text {
+    margin-left: 0px;
+    max-width: 100%;
+    height: auto;
+  }
+  #homepage {
+    background: none;
+  }
+  #social-actions {
+    margin-bottom: 26px;
+    margin-top: 33px;
+  }
 </style>
 {% endblock pagecss %}
 
 {% block pagetitle %}{% endblock pagetitle %}
 {% block pagecontent %}
 <article id="homepage">
+        <div id="browse-control-anchor"></div>
+        {{ templatetags.topic_browser("browse", version_number) }}
+        {{ templatetags.topic_browser("browse-fixed", version_number) }}
+        <br />
+<!--
     <div id="main-video">
       <iframe width="560" height="315" src="http://www.youtube.com/embed/tC80BNOKJtk" frameborder="0" allowfullscreen></iframe>
     </div>
-    <div id="homepage-text" class="visited-no-recolor">
-        <h1 class="section-headline pulls"><a href="/#browse" data-tag="Homepage Headline">Bekijk.</a> <a href="/exercisedashboard" data-tag="Homepage Headline">Oefen.</a></h1>
-        <h1>Leer bijna alles; gratis!</h1>
-        <p>
-            <b><i>Welkom op de vernieuwde site van Khan Academie.<br> Wij zijn op een missie om jou te helpen alles te leren over onderwerpen waar jij interesse in hebt, wanneer jij het wilt en in je eigen tempo.</b><br><br> 
-            Achter de schermen wordt er hard gewerkt om de site te optimaliseren. Wij hebben ons ten doel gesteld alle bestaande oefeningen voor het einde van 2012 vertaald te hebben naar het Nederlands en deze in te delen volgens de referentieniveaus van Meijerink. 
-            Daarnaast gaan er nieuwe oefeningen toegevoegd worden en worden alle oefeningen van video-uitleg voorzien.</i><br><br>
-             
-            <I><SMALL>Deelnemers die reeds actief waren op de oude site kunnen deze nog steeds bereiken op: <a href="http://oud.khanacademie.nl">oud.khanacademie.nl</a>
-            Deze site wordt echter niet meer up-to-date gehouden, daarom raden wij jullie aan om zo snel mogelijk over te stappen naar de nieuwe omgeving.</SMALL></I></b><br><br>
-        <div>
-            <a href="/#browse" data-tag="Homepage C2A" class="call-to-action simple-button green watch-a-video">Bekijk een video</a>
-            <a href="/exercisedashboard" data-tag="Homepage C2A" class="call-to-action simple-button blue">Ga de uitdaging aan</a>
-        </div>
-
+    -->
+    <div id="homepage-left-col">
+        <div id="leaves"></div>
+        <div id="homepage-logo"></div>
         <div id="social-actions">
             <table>
                 <tr>
@@ -65,13 +90,32 @@
                 </tr>
             </table>
         </div>
+        <div id="homepage-text" class="visited-no-recolor">
+            <p>
+                <b><i>Welkom op de vernieuwde site van Khan Academie.<br> Wij zijn op een missie om jou te helpen alles te leren over onderwerpen waar jij interesse in hebt, wanneer jij het wilt en in je eigen tempo.</b><br><br> 
+                Achter de schermen wordt er hard gewerkt om de site te optimaliseren. Wij hebben ons ten doel gesteld alle bestaande oefeningen voor het einde van 2012 vertaald te hebben naar het Nederlands en deze in te delen volgens de referentieniveaus van Meijerink. 
+                Daarnaast gaan er nieuwe oefeningen toegevoegd worden en worden alle oefeningen van video-uitleg voorzien.</i><br><br>
+                 
+                <I><SMALL>Deelnemers die reeds actief waren op de oude site kunnen deze nog steeds bereiken op: <a href="http://oud.khanacademie.nl">oud.khanacademie.nl</a>
+                Deze site wordt echter niet meer up-to-date gehouden, daarom raden wij jullie aan om zo snel mogelijk over te stappen naar de nieuwe omgeving.</SMALL></I></b><br><br>
+                <!--
+            <div>
+                <a href="/#browse" data-tag="Homepage C2A" class="call-to-action simple-button green watch-a-video">Bekijk een video</a>
+                <a href="/exercisedashboard" data-tag="Homepage C2A" class="call-to-action simple-button blue">Ga de uitdaging aan</a>
+            </div>
+            -->
+    
+        </div>
+        
     </div>
+    <!--
     <h2>
         Nieuw <span class="ampersand">&amp;</span> Opmerkelijk
     </h2>
     <h3>
         <a href="http://blog.khanacademie.nl/">Bekijk ook ons Blog!</a>
     </h3>
+    -->
     {% if thumbnail_link_sets %}
     <div id="thumbnails_container">
         <table width="100%">
@@ -126,7 +170,10 @@
                     </span>&nbsp;geleverde lessen:
             </span>
         </div>
+        <!--
         <h2 class="main-headline">Neem een kijkje in onze collectie video's</h2>
+        -->
+        {#
         {% if DVD_list %}
         <ul class="menu" id="menu">
             {% for topic in DVD_list %}
@@ -139,12 +186,16 @@
         {{ templatetags.topic_browser("browse-fixed", version_number) }}
 
         {% endif %}
+#}
         <a href="/mobilefullsite" class="mobile-only" data-role="button" data-ajax="false">zie standaard site</a>
     </div>
 </div>
 <div class="clear"></div>
+{#
 {{ library_content }}
+#}
 
+<br />
 </article>
 
 <div id="back-to-top">
